# flask-project

./: README.md  app.py  pyproject.toml
notebooks/: python_request_example.ipynb
