[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = "Projeto de Rest API - Flask"
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
scikit-learn = "1.2.1"
ipykernel = "6.20.2"
requests = "2.28.2"
pandas = "1.5.3"
flask = "^1.1.4"
werkzeug = "<2.1.0"
markupsafe = "1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
